--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,6 @@
 }
 .wooseok{
     color: greenyellow;
-    font-family: 'Gill sans', sans serif;
+    font-family: 'Gill sans', sans-serif;
     text-align: center;
 }
